# fp-fall-2023

./: .gitignore  CHANGELOG.md  LICENSE  MyLib.hs  Parser.hs  README.md  commented_test.fasta  deadlines_nov.md  example.txt  fasta_with_comm.fasta  homework1.hs  hw02.cabal  hw03.cabal  hw03.hs  hw1.hs  hw10.cabal  hw10.hs  hw11.cabal  hw11.hs  hw12.cabal  hw12.hs  hw1_done.hs  hw1_solution.hs  hw2.cabal  hw2.hs  hw3.cabal  hw3.hs  hw37.cabal  hw4.cabal  hw4.hs  hw5.cabal  hw5.hs  hw5_initial.hs  hw6.cabal  hw6.hs  hw67.cabal  hw7.cabal  hw7.hs  hw8.cabal  hw8.hs  (+26 more)
HT2/: hw2.cabal
HT2/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
HT2/src/: MyLib.hs
HT2/test/: TestsSpec.hs
HW_io/: task1.hs  task2.hs  task3.hs
Homework2/: LICENSE  hw02.hs  hw2.cabal
Homework2/app/: Main.hs
Homework2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Homework2/dist-newstyle/packagedb/ghc-9.4.7/: hw2-0.1.0.0-inplace.conf  package.cache
app/: Main.hs  Parser.hs  Task1.hs  Task2.hs  Task3.hs  newDb.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
files_for_parsing/: test.fasta
homework2/: hw2.cabal
homework2/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
homework2/dist-newstyle/packagedb/ghc-9.4.7/: hw2-0.1.0.0-inplace.conf  package.cache
homework2/src/: MyLib.hs
homework2/test/: TestSpec.hs
hw02/: .cabal-fmt-7628-X6jcsP6ax2RS  .cabal-fmt-7628-YP1kzzExqZb7  CHANGELOG.md  LICENSE  hw02.cabal
hw02/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hw02/dist-newstyle/packagedb/ghc-9.4.7/: hw02-0.1.0.0-inplace.conf  package.cache
hw02/src/: MyLib.hs
hw02/test/: TestSpec.hs
hw03/: CHANGELOG.md  hw03.cabal
hw03/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hw03/dist-newstyle/packagedb/ghc-9.4.7/: hw03-0.1.0.0-inplace.conf  package.cache
hw03/src/: MyLib.hs
hw03/test/: TestSpec.hs
hw05/: CHANGELOG.md  hw05.cabal
hw05/src/: MyLib.hs
hw05/test/: TestSpec.hs
hw06/: CHANGELOG.md  LICENSE  hw06.cabal
hw06/src/: MyLib.hs  Parser.hs
hw06/test/: TestSpec.hs
hw10/: CHANGELOG.md  hw10.cabal
hw10/app/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
hw10/io_hw/: task1.hs  task2.hs  task3.hs  task4.hs
hw10/src/: MyLib.hs
hw10/test/: TestSpec.hs
hw11/: CHANGELOG.md  hw11.cabal
hw11/src/: MyLib.hs
hw11/test/: TestSpec.hs
hw12/: CHANGELOG.md  hw12.cabal  prac12.hs
hw12/src/: MyLib.hs
hw12/test/: TestSpec.hs
hw2/: LICENSE  hw2.cabal
hw2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hw2/dist-newstyle/packagedb/ghc-9.2.6/: hw2-0.1.0.0-inplace.conf  package.cache
hw2/src/: MyLib.hs
hw2/test/: TestSpec.hs
hw3/: hw3.cabal
hw3/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hw3/dist-newstyle/packagedb/ghc-9.6.2/: hw3-0.1.0.0-inplace.conf  package.cache
hw3/src/: MyLib.hs
hw3/test/: TestSpec.hs
hw34/: CHANGELOG.md  LICENSE  hw34.cabal
hw34/src/: MyHW3.hs  MyHW4.hs
hw34/test/: TestSpec.hs
hw3_4/: hw34.cabal
hw3_4/src/: MyHw3.hs  MyHw4.hs
hw3_4/test/: TestSpec.hs
hw4/: CHANGELOG.md  hw4.cabal
hw4/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hw4/dist-newstyle/packagedb/ghc-9.6.2/: hw4-0.1.0.0-inplace.conf  package.cache
hw4/src/: MyLib.hs
hw4/test/: TestSpec.hs
hw5/: CHANGELOG.md  hw5.cabal
hw5/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hw5/dist-newstyle/packagedb/ghc-9.6.2/: hw5-0.1.0.0-inplace.conf  package.cache
hw5/src/: MyLib.hs
hw5/test/: TestSpec.hs
hw6/: CHANGELOG.md  hw6.cabal
hw6+7/: hw67.cabal
hw6+7/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hw6+7/dist-newstyle/packagedb/ghc-9.4.7/: package.cache
hw6+7/files_for_parsing/: test.csv
hw6+7/src/: HW6.hs  HW7.hs  Parser.hs
hw6+7/test/: TestSpec.hs
hw6/src/: MyLib.hs  MyLib6.hs  MyLib7.hs  Parser.hs
hw6/test/: TestSpec.hs
hw7/: CHANGELOG.md  hw7.cabal
hw7/src/: MyLib.hs  Parser.hs  test.fasta  test_comment.fasta  test_incorrect.fasta
hw7/test/: TestSpec.hs
hw8/: CHANGELOG.md  hw8.cabal  prac8.hs
hw8+9/: CHANGELOG.md  hw89.cabal
hw8+9/src/: MyHW8.hs  MyHW9.hs  MyLib.hs
hw8+9/test/: TestSpec.hs
hw8/src/: MyLib.hs  MyLib8.hs  MyLib9.hs
hw8/test/: TestSpec.hs
hw9/: CHANGELOG.md  LICENSE  hw9.cabal  prac9.hs
hw9/src/: MyLib.hs
hw9/test/: TestSpec.hs
io_hw/: Task1.hs  Task2.hs  task1.hs  task1.sh  task2.hi  task2.hs  task3.hi  task3.hs  task4.hs
lecture/: 0.hs  1.hs  2.hs
lib/: MyLib.hs  Parser.hs
prac02/: CHANGELOG.md  LICENSE  prac02.cabal
prac02/src/: MyLib.hs
prac02/test/: TestSpec.hs
src/: Database.hs  Errors.hs  Logging.hs  MyBeautifulDB.hs  MyHW6.hs  MyHW7.hs  MyHW8.hs  MyHW9.hs  MyLib.hs  Objects.hs  Parser.hs
test/: TestSpec.hs
