cabal-version:      2.4
name:               hw02
version:            0.1.0.0
synopsis:           homework2

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             sepofia
maintainer:         lazareva.sone4ka@yandex.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite hw02-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    ghc-options:      -Wall
    build-depends:    base ^>=4.17.2.0,
                      hspec,
                      hw02
    other-modules:    TestSpec