cabal-version:      2.4
name:               hw10
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Ivan
maintainer:         shchukin.global@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options:      -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.18.0.0
                 ,    mtl
    hs-source-dirs:   lib
    default-language: Haskell2010

executable hw10
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0,
        hw10
                 ,    mtl

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hw10-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:
        base ^>=4.18.0.0,
        hw10
        ,    hspec
                 ,    mtl
    other-modules:    TestSpec