cabal-version:      2.4
name:               hw10
version:            0.1.0.0
synopsis:           HW10
-- description:
license:            MIT
license-file:       LICENSE
author:             SophiaLaz
maintainer:         lazareva.sone4ka@yandex.ru
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    ghc-options:      -Wall
    -- other-modules:    
    -- other-extensions:
    build-depends:    base ^>=4.18.1.0,
        mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable hw10
    import:           warnings
    main-is:  Main.hs
    ghc-options:      -Wall
    other-modules:    Task1, 
        Task2,
        Task3,
        Parser
    build-depends:    base ^>=4.18.1.0,
        mtl,
        directory,
        text,
        filepath,
        hashable
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hw10-test
    import:           warnings
    default-language: Haskell2010
    ghc-options:      -Wall
    other-modules:    TestSpec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:
        base ^>=4.18.1.0,
        hw10,
        hspec,
        mtl
