cabal-version:      2.4
name:               hw11
version:            0.1.0.0
synopsis:           HW11
-- description:
license:            MIT
license-file:       LICENSE
author:             SophiaLaz
maintainer:         lazareva.sone4ka@yandex.ru
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable hw11
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.1.0,
        hw11

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hw11-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        hw11
