cabal-version:      2.4
name:               hw12
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Ivan
maintainer:         shchukin.global@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0,
                      mtl,
                      transformers,
        containers,
        split
    hs-source-dirs:   lib
    default-language: Haskell2010

executable hw12
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.0.0,
        hw12,
        mtl,
        transformers,
        containers,
        split

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hw12-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    TestSpec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:
        base ^>=4.18.0.0,
        hw12,    
        hspec,
        mtl,
        transformers,
        containers,
        split
