cabal-version:      2.4
name:               hw2
version:            0.1.0.0
synopsis:           hw2

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Julia Belova
maintainer:         rollineea@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    ghc-options:      -Wall
    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw2-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    ghc-options:      -Wall
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.17.2.0,
					  hspec,
					  hspec-discover,
					  hw2
	other-modules:    TestSpec
