cabal-version:      2.4
name:               hw37
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             jmkostina
maintainer:         jmkostina@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    ghc-options:      -Wall
    exposed-modules:  MyLib, 
                      Parser

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      containers,
                      text
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw37-test
    default-language: Haskell2010
    ghc-options:      -Wall
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.17.2.0,
                      hw37,
                      containers,
                      hspec,
                      text
    other-modules:    TestSpec
