cabal-version:        2.4
name:                 hw4
version:              1.0
synopsis:             homework 4
license:              Apache-2.0
license-file:         LICENSE
author:               alex-shishkin
maintainer:           alexxxshishkin@yandex.ru
build-type:           Simple
extra-doc-files:      CHANGELOG.md

common warnings
    ghc-options:      -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.18.1.0
                 ,    containers
                 ,    text
                 ,    vector
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw4-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.18.1.0
                 ,    hw4
                 ,    hspec
                 ,    containers
                 ,    text
                 ,    vector
    other-modules:    TestSpec
