cabal-version:      2.4
name:               hw4
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             jmkostina
maintainer:         jmkostina@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    ghc-options:      -Wall
    build-depends:    base ^>=4.17.2.0
                 ,    containers
                 ,    text
                 ,    vector
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw4-test
    default-language: Haskell2010
    ghc-options:      -Wall
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.17.2.0
                 ,    hspec
                 ,    hw4
                 ,    containers
                 ,    text
                 ,    vector
    other-modules:    TestSpec
