cabal-version:      2.4
name:               hw5
version:            0.1.0.0
synopsis:           HW5
-- description:
license:            MIT
license-file:       LICENSE
author:             SophiaLaz
maintainer:         lazareva.sone4ka@yandex.ru
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.1.0,
        containers, array
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite hw5-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    TestSpec
    -- other-extensions:
    ghc-options:      -Wall
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:
        base ^>=4.18.1.0,
        hw5,
        hspec,
        containers, 
        array
