cabal-version:      2.4
name:               hw7
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             alex-shishkin
maintainer:         alex-shishkin@yandex-team.ru
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib,
                      Parser
    build-depends:    base ^>=4.18.1.0,
                      containers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw7-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:
        base ^>=4.18.1.0,
        hw7,
        containers,
        hspec
    other-modules:    TestSpec
