cabal-version:      2.4
name:               hw7
version:            0.1.0.0
synopsis:           hw7

license:            MIT
license-file:       LICENSE
author:             SophiaLaz
maintainer:         lazareva.sone4ka@yandex.ru
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib, Parser
    build-depends:    base ^>=4.18.1.0,
        text,
        containers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite hw7-test
    import:           warnings
    default-language: Haskell2010
    ghc-options:      -Wall
    other-modules:    TestSpec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:
        base ^>=4.18.1.0,
        hw7,
        hspec,
        text,
        containers
