cabal-version:      2.4
name:               hw8
version:            0.1.0.0
synopsis:           HW8
license:            MIT
license-file:       LICENSE
author:             SophiaLaz
maintainer:         lazareva.sone4ka@yandex.ru
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    ghc-options:      -Wall
    build-depends:    base ^>=4.18.1.0,
        mtl, 
        containers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw8-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    TestSpec
    ghc-options:      -Wall
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:
        base ^>=4.18.1.0,
        hw8,
        hspec,
        mtl,
        containers
