cabal-version:      2.4
name:               hw8
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             jmkostina
maintainer:         jmkostina@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    ghc-options:      -Wall
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      mtl,
                      containers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw8-test
    ghc-options:      -Wall
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.17.2.0,
                      hw8,
                      containers,
                      hspec,
                      mtl
    other-modules:    TestSpec
