cabal-version:      2.4
name:               hw9
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Ivan
maintainer:         shchukin.global@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options:      -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0
                 ,    mtl
                 ,    containers
                 ,    hspec
                 ,    random
    hs-source-dirs:   lib
    default-language: Haskell2010

executable hw9
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
                      base ^>=4.18.0.0
                 ,    hw9
                 ,    mtl
                 ,    containers
                 ,    hspec
                 ,    random
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hw9-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:
                      base ^>=4.18.0.0
                 ,    hw9
                 ,    mtl
                 ,    containers
                 ,    hspec
                 ,    random
    other-modules:    TestSpec
