cabal-version:      2.4
name:               hw06
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             gvolsky
maintainer:         moseychuk.art@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib, Parser
    ghc-options:      -Wall

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                 ,    containers
                 ,    text
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw06-test
    default-language: Haskell2010
    ghc-options:      -Wall
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    other-modules:    TestSpec
    build-depends:    base ^>=4.17.2.0
                 ,    hspec
                 ,    hw06
                 ,    text
                 ,    containers
