cabal-version:      2.4
name:               hw3
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Denis Tereshchenko
maintainer:         dotereschenko@edu.hse.ru
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw3-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyTest.hs
    other-modules:    TestSpec
    build-depends:
        base ^>=4.18.0.0,
        hw3,
        hspec
