cabal-version:      2.4
name:               hw34
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Julia Belova
maintainer:         rollineea@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyHW3, MyHW4
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.17.2.0,
        containers,
        text,
        vector


    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw34-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:
        base ^>=4.17.2.0,
        hspec,
        hspec-discover,
        hw34,
        vector,
        containers,
        text
    other-modules:    TestSpec
