cabal-version:      2.4
name:               hw34
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Daniil Bakushkin
maintainer:         dev.daniil.bakushkin@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyHw3, MyHw4
    ghc-options:      -Wall

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.17.2.0,
        containers,
        text,
        vector,
        time

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw34-test
    default-language: Haskell2010
    ghc-options:      -Wall
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    other-modules:    TestSpec
    build-depends:    base ^>=4.17.2.0
                 ,    containers
                 ,    text
                 ,    vector
                 ,    hspec
                 ,    time
                 ,    hw34