cabal-version:      2.4
name:               hw67
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Daniil Bakushkin
maintainer:         dev.daniil.bakushkin@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  HW6, HW7, Parser
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      containers,
                      text,

    hs-source-dirs:   src
    default-language: Haskell2010
    -- default-extensions: ImportQualifiedPost

test-suite hw67-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:
        base ^>=4.17.2.0,
        hw67,
        hspec,
        hspec-discover,
        text,
        containers
    other-modules:    TestSpec
    -- default-extensions: ImportQualifiedPost
