cabal-version:      2.4
name:               hw67
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Daniil Bakushkin
maintainer:         dev.daniil.bakushkin@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  HW6, HW7, Parser

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      containers,
                      array
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall
    default-extensions: ImportQualifiedPost

test-suite hw67-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.17.2.0,
                      hspec,
                      hspec-discover,
                      hw67,
                      array,
                      containers
    build-tool-depends: hspec-discover:hspec-discover
    ghc-options: -Wall
    other-modules: TestSpec
    default-extensions: ImportQualifiedPost
    