cabal-version:      2.4
name:               hw89
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Daniil Bakushkin
maintainer:         dev.daniil.bakushkin@gmail.com

-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyHW8, MyHW9
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      base,
                      mtl,
                      containers,
                      random
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw89-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:
        base ^>=4.17.2.0,
        hw89, 
        hspec, 
        hspec-discover,
        base,
        mtl,
        containers,
        random
    other-modules:    TestSpec